# Indian_Railway-Sch_RL_agent

./: .env.example  .gitignore  app.py  inference.py  pyproject.toml  serve.py  setUp.md  submit.md
frontend/: index.html
my_env/: .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  how_to_run.md  inference.py  models.py  openenv.yaml  uvicorn_err.txt
my_env/data/: config.py  index.html  knowledge_base.json  network.json  network.py  simulation_state.json  timetable.json
my_env/server/: __init__.py  app.py  my_env_environment.py
testing/: test.py
